# DIO-TDD-PROJECT

./: .gitignore  README.md  WINDOWS_GUIDE.md  docker-compose.yml  pyproject.toml  pytest.ini  run.bat  run_server.py  run_src.bat  test.bat
src/: calculator.py  main.py
store/: main.py
store/controllers/: product.py
store/core/: config.py
store/core/schemas/: base.py  product.py
store/db/: mongo.py
store/models/: product.py
store/usecases/: product.py
tests/: conftest.py  factories.py  test_calculator.py  test_fastapi_example.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
